<resources>
    <string name="app_name">CV Builder</string>
    <string name="add_new_resume">Add New Resume</string>

    <string-array name="durations">
        <item>Year(s)</item>
        <item>Month(s)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="institution_name">Institution Name</string>
    <string name="class_x_xii_graduation">Class (X, XII, Graduation)</string>
    <string name="passing_year">Passing Year</string>
    <string name="percentage_cgpa">Percentage/CGPA</string>
    <string name="delete">Delete</string>
    <string name="no_saved_resume">No Saved Resume :(</string>
    <string name="select_image">Select Image</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="residence_address">Residence Address</string>
    <string name="career_objective">Career Objective</string>
    <string name="next">Next</string>
    <string name="total_years_of_experience">Total Years of Experience</string>
    <string name="_00">00</string>
    <string name="years">Years</string>
    <string name="add_new_work_experience">Add new Work Experience</string>

</resources>