<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/institutionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/institution_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/classText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/class_x_xii_graduation"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/passingYearText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/passing_year"
                    android:inputType="numberSigned"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />

                <Space
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/percentageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/percentage_cgpa"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <Button
                android:id="@+id/deleteEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delete" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>